# fake-fix-server

./: .gitignore  CMakeLists.txt  README.md
config/: session_settings.txt
fix/: FIX44.xml
inc/: application.hpp  message_cracker.hpp
src/: CMakeLists.txt  application.cpp  main.cpp  message_cracker.cpp
