cmake_minimum_required(VERSION 3.0.2 FATAL_ERROR)
project (FixServer)
include(ExternalProject)
set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
set(LIBPREFIX "${CMAKE_STATIC_LIBRARY_PREFIX}")
set(LIBSUFFIX "${CMAKE_STATIC_LIBRARY_SUFFIX}")
set(CMAKE_VERBOSE_MAKEFILE OFF)

if("${LIBRARY_OUTPUT_PATH}" STREQUAL "")
    message( WARN " SETTING LIBRARY_OUTPUT_PATH")
    set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
    message( STATUS "LIBRARY_OUTPUT_PATH IS:     " ${LIBRARY_OUTPUT_PATH} )
endif()

if("${EXECUTABLE_OUTPUT_PATH}" STREQUAL "")
    message( WARN " SETTING EXECUTABLE_OUTPUT_PATH")
    set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
    message( STATUS "EXECUTABLE_OUTPUT_PATH IS:     "
${EXECUTABLE_OUTPUT_PATH} )
endif()

if("${CMAKE_MODULE_PATH}" STREQUAL "")
    message( WARN " SETTING EXECUTABLE_OUTPUT_PATH")
    set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
    message( STATUS "CMAKE_MODULE_PATH IS:     " ${CMAKE_MODULE_PATH} )
endif()

message( STATUS "CMAKE_MODULE_PATH: " ${CMAKE_MODULE_PATH} )
add_subdirectory(src)
